# geometry-mmalls-g1

./: .gitignore  ARTIFACT_MANIFEST.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DELTA_APPLY_README.md  DELTA_FILE_INDEX.csv  DELTA_MANIFEST.json  EXCLUDED_LARGE_EVIDENCE_SHA256SUMS.txt  EXCLUDED_REDUNDANT_ASSET_SHA256SUMS.txt  Geometry_MMALS_G1_v1_0_6_Static_Routes_Counterbalanced_Curriculum_Report.md  Geometry_MMALS_G1_v1_0_6_to_v1_0_7.md  Geometry_MMALS_G1_v1_0_7_Context_Bottleneck_Protocol_Report.md  Geometry_MMALS_G1_v1_0_8_Results_and_Interpretation_Report.tex  Geometry_MMALS_G1_v1_0_9_Nonnegative_RNG_Seed_Patch.md  Geometry_MMALS_G1_v1_0_9_STABLE_BUILD_NOTES.md  Geometry_MMALS_G1_v1_0_9_Stationary_Route_Gradient_Patch.md  Geometry_MMALS_G1_v1_0_9_to_v1_1_0_Spec.md  Geometry_MMALS_G1_v1_1_0_Execution_Archive_20260614.sha256  Geometry_MMALS_G1_v1_1_0_Results_and_v1_1_1_Plan_Release_Notes.md  Geometry_MMALS_G1_v1_1_1_and_1_1_x_Roadmap.md  LICENSE  MIGRATION_v1_0_6_to_v1_0_7.md  Makefile  README.md  RELEASE_CHECKLIST_v1_0_7.md  RELEASE_CHECKLIST_v1_0_8.md  RELEASE_CHECKLIST_v1_1_1.md  RESULTS_DELTA_FILE_INDEX.csv  RESULTS_DELTA_MANIFEST.json  RESULTS_DELTA_README.md  SHA256SUMS  STATUS.md  V1_0_9_BUILD_VALIDATION.json  V1_1_0_BUILD_VALIDATION.json  V1_1_0_SPEC_VALIDATION.json  development_method_summary.csv  missing_checkpoint.yaml  missing_seed.yaml  pyproject.toml  (+16 more)
configs/: rotated_mnist_g1.yaml  rotated_mnist_g1_v105.yaml  rotated_mnist_g1_v106.yaml  rotated_mnist_g1_v107.yaml  rotated_mnist_g1_v108.yaml  rotated_mnist_g1_v109.yaml  rotated_mnist_g1_v110.yaml  (+4 more)
(+606 files in other folders)
