[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-mmalls-g1"
version = "1.1.2"
description = "Grounded functional geometry experiments for MMALS continual learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Guillaume Harbonnier"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.3"]
verification = ["pypdf>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
